# cli-llmstxt

./: .gitignore  README.md  code_review_report.md  pyproject.toml  test_cli.py  test_gitignore.py  test_integration.py
src/llmstxt/: __init__.py  app.py  cli.py  config.py  custom_file_reader.py  gitignore_handler.py  interface_analysis.py  llm_service.py  logging_config.py  main.py  mock_llm.py  output_generator.py  processing_engine.py  prompts.py  repo_analyzer.py  repository.py
test_output/: llms-full.txt  llms.txt
tests/fixtures/example_codebase/: utils.py
tests/unit/: __init__.py  test_cli.py  test_gitignore_handler.py  test_output_generator.py  test_processing_engine.py  test_repository.py
