[project]
name = "llmstxt"
version = "0.1.0"
description = "Generate an llmtxt file for a git repository"
readme = "README.md"
authors = [
    { name = "Terence Munro", email = "terence.munro@microba.com" }
]
requires-python = ">=3.13"
dependencies = [
  "llama-index",
  "llama-index-llms-openai",
  "llama-index-readers-file",
  "GitPython",
  "python-dotenv",
  "openai",
]

[project.scripts]
llmstxt = "llmstxt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "ruff>=0.11.11",
]

[tool.uv]
upgrade = true
